tests/errors/recursive-unification/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0103]: Failed to unify recursive type `a -> b`.
  │
3 │  x x
  │  ^^^
  ╰─𜱶 tests/errors/recursive-unification/main.pa:3:2
